# tauri-plugin-extensions

./: .gitignore  COMMERCIAL-LICENSE.md  Cargo.toml  LICENSE.md  README.md  engineering-summary.md  rust-toolchain.toml
crates/tauri-plugin-extensions/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-extensions/embedded-js/: background-bootstrap.js  content-bootstrap.js
crates/tauri-plugin-extensions/permissions/: default.toml
crates/tauri-plugin-extensions/permissions/autogenerated/: reference.md
crates/tauri-plugin-extensions/permissions/autogenerated/commands/: extensions_content_ready.toml  extensions_diagnostics.toml  extensions_disable.toml  extensions_enable.toml  extensions_list.toml  extensions_list_lifecycle.toml  extensions_load_unpacked.toml  extensions_reconcile_orphans.toml  extensions_reload.toml  extensions_runtime_connect.toml  extensions_runtime_port_disconnect.toml  extensions_runtime_port_post.toml  extensions_runtime_send_message.toml  extensions_scripting_get_registered_content_scripts.toml  extensions_scripting_register_content_scripts.toml  extensions_scripting_unregister_content_scripts.toml  extensions_storage_clear.toml  extensions_storage_get.toml  extensions_storage_remove.toml  extensions_storage_set.toml  extensions_unload.toml
crates/tauri-plugin-extensions/permissions/schemas/: schema.json
crates/tauri-plugin-extensions/src/: error.rs  lib.rs  loader.rs  registry.rs
crates/tauri-plugin-extensions/src/ipc/: bus.rs  command.rs  mod.rs  router.rs
crates/tauri-plugin-extensions/src/lifecycle/: events.rs  manager.rs  mod.rs  state.rs  store.rs
crates/tauri-plugin-extensions/src/manifest/: mod.rs  schema.rs
crates/tauri-plugin-extensions/src/manifest/snapshots/: tauri_plugin_extensions__manifest__tests__noop_mv3_manifest.snap
crates/tauri-plugin-extensions/src/matcher/: glob.rs  mod.rs  tests.rs  url_pattern.rs
crates/tauri-plugin-extensions/src/runtime/: background.rs  dynamic_scripts.rs  injection.rs  mod.rs  resources.rs  wait.rs  webkitgtk.rs  webview2.rs  wkwebview.rs
crates/tauri-plugin-extensions/src/storage/: local.rs  mod.rs  session.rs
crates/tauri-plugin-extensions/tests/: background_host.rs  bg_reload_race.rs  c_bus_storage.rs  dynamic_scripts.rs  injection_rule_resolution.rs  lifecycle_regression.rs  load_noop_fixture.rs  manifest_real_extensions.rs  runtime_routing.rs  win-comctl32-v6.manifest
crates/tauri-plugin-extensions/tests/fixtures/manifests/phantom/: manifest.json
docs/: ARCHITECTURE.md  DECISIONS.md  bg-host-service-worker.md  evm-injection-findings.md  phantom-load-observations-2026-04-20.md  spike-notes-2026-04-20.md  spike-plan.md  wallet-fixtures.md
examples/minimal-host/: README.md  package.json
examples/minimal-host/src-tauri/: Cargo.toml  tauri.conf.json
examples/minimal-host/src-tauri/capabilities/: default.json
examples/minimal-host/src-tauri/src/: lib.rs  main.rs
fixtures/: injection-test.html
fixtures/test-dapp/: README.md  index.html
fixtures/test-extensions/classic-importscripts-mv3/: manifest.json  part-a.js  part-b.js  sw.js
fixtures/test-extensions/metamask/: README.md
fixtures/test-extensions/module-import-mv3/: chunk-brand.js  manifest.json  sw.js
fixtures/test-extensions/module-register-content-mv3/: chunk-config.js  inpage.js  manifest.json  sw.js
fixtures/test-extensions/noop-mv3/: README.md  background.js  content.js  manifest.json
fixtures/test-extensions/phantom/: README.md
fixtures/test-extensions/rabby/: README.md
js-runtime/: build.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
js-runtime/src/background/: bootstrap.ts
js-runtime/src/content/: bootstrap.ts
js-runtime/src/shared/: config.ts  events.ts  install.ts  runtime.ts  storage.ts  stubs.ts  tauri.ts  trace.ts  types.ts
scripts/: fetch-metamask.ps1  fetch-phantom.ps1  fetch-rabby.ps1
tests/integration/: README.md
