[workspace]
resolver = "2"
members = [
    "crates/tauri-plugin-extensions",
]
# `examples/minimal-host` has its own `[workspace]` table and is therefore
# already its own workspace root; `exclude` makes that explicit and keeps
# `cargo check --workspace` (rooted here) from pulling the full Tauri host
# build graph into every plugin check.
exclude = [
    "examples/minimal-host",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/aurous37-lang/tauri-plugin-extensions"
authors = ["aurous37-lang"]

[workspace.dependencies]
# Tauri — pinned to v2 line, matching the wallet-harness parent project.
# The plugin API lives in `tauri::plugin::*`, so there's no separate
# `tauri-plugin` crate in v2.
tauri = { version = "2", features = [] }

# Async + runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "fs"] }
futures = "0.3"
async-trait = "0.1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# Collections + utilities
dashmap = "6"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }

# URL / pattern matching
url = "2"
regex = "1"
percent-encoding = "2"

# Filesystem
walkdir = "2"

# Crypto — used for Chrome-style extension-id derivation (SHA-256 of the
# manifest's public key, first 16 bytes, each nibble mapped into `a..=p`).
sha2 = "0.10"
base64 = "0.22"

# Dev / test
tempfile = "3"
insta = { version = "1", features = ["json", "yaml"] }
pretty_assertions = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Faster incremental builds for the background-runner spike loop
opt-level = 0
debug = 1
